Migrate to java8 (#36)
* use java8 compatible version of materialfx

* fix stepper skin positioning

* replace MFXTextField to fix layout

* replace MFXTextField to fix layout

* change to JDK 8 build env

* delete notes.md

* chore: remove package worflow since we are not creating binary installers anymore

Co-authored-by: Max Burri <burri@puzzle.ch>