@@ -1,8 +1,6 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'org.beryx.runtime' version '1.12.7'
     id 'org.asciidoctor.jvm.convert' version '3.3.2'
     id 'org.asciidoctor.jvm.pdf' version '3.3.2'
 }
@@ -17,7 +15,8 @@ repositories {
 group = 'ch.admin.bar'
 version = '1.0-SNAPSHOT'
 description = 'SIARD Suite'
-java.sourceCompatibility = JavaVersion.VERSION_18
+java.sourceCompatibility = JavaVersion.VERSION_1_8
+java.targetCompatibility = JavaVersion.VERSION_1_8
 mainClassName = "ch.admin.bar.siardsuite.Launcher"
 
 manifest {
@@ -26,11 +25,9 @@ manifest {
     )
 }
 
-
 dependencies {
-    implementation 'org.openjfx:javafx-controls:18'
-    implementation 'org.openjfx:javafx-fxml:18'
-    implementation 'io.github.palexdev:materialfx:11.13.5'
+
+    implementation 'org.glavo.materialfx:materialfx:11.13.5'
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
     testImplementation "org.testfx:testfx-core:4.0.16-alpha"
@@ -45,9 +42,6 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-tasks.withType(JavaExec) {
-    jvmArgs("--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED", "--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED", "--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED", "--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED")
-}
 
 // task to create an exectutable jar file with all necessary dependencies included and signature files removed.
 task fatJar(type: Jar) {
@@ -65,56 +59,13 @@ task fatJar(type: Jar) {
 test {
     useJUnitPlatform()
     // run tets in headless mode -for testFX
-    jvmArgs "-Djava.awt.headless=true", "-Dtestfx.headless=true", "--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED", "--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED", "--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED", "--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"
+    jvmArgs "-Djava.awt.headless=true", "-Dtestfx.headless=true"
 }
 
-javafx {
-    version = "19"
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
-}
 
 application {
     mainClass = mainClassName
-    applicationDefaultJvmArgs = ['--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED', '--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED', '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED']
 }
-
-runtime {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-
-    launcher {
-        noConsole = true
-    }
-
-    additive = true
-    modules = [
-            'java.logging',
-            'java.sql',
-            'java.management',
-            'java.naming'
-    ]
-
-    jpackage {
-        appVersion = '1.0'
-
-        def currentOs = org.gradle.internal.os.OperatingSystem.current()
-        def imgType = currentOs.windows ? 'ico' : currentOs.macOsX ? 'icns' : 'png'
-        //imageOptions += ['--icon', "src/main/resources/hellofx.$imgType"]
-        imageOptions += ['--icon', "src/main/resources/ch/admin/bar/siardsuite/icons/archive.png"]
-
-        installerOptions += ['--resource-dir', "src/main/resources"]
-        installerOptions += ['--vendor', 'BUAR']
-
-        if (currentOs.windows) {
-            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
-        } else if (currentOs.linux) {
-            installerType = "deb"
-            installerOptions += ['--linux-package-name', 'siard-suite', '--linux-shortcut']
-        } else if (currentOs.macOsX) {
-            installerOptions += ['--mac-package-name', 'siard-suite']
-        }
-    }
-}
-
 
 // create additional scripts for siardcmd...
 // see https://stackoverflow.com/a/62069262/1310321
@@ -190,5 +141,3 @@ task copyDocumentation(type: Copy) {
 tasks.named("asciidoctorPdf") { finalizedBy(copyDocumentation)}
 tasks.named("build") { dependsOn(asciidoctorPdf)}
 tasks.named("processResources") { dependsOn(copyDocumentation)}
-
-
